--- a/CustomAnimatedBackgrounds.css
+++ b/CustomAnimatedBackgrounds.css
@@ -2,3 +2,8 @@
 [data-user-id*="340900973490995200"] {
     --user-background: url('https://cdn.discordapp.com/attachments/340907307988680705/811693872669130772/purpleCity.gif');
 }
+
+[user_by_bdfdb*="253642548365623296"],
+[data-user-id*="253642548365623296"] {
+    --user-background: url('https://media1.giphy.com/media/aN9GqoR7OD3nq/200.gif');
+}
