--- a/CustomAnimatedBackgrounds.css
+++ b/CustomAnimatedBackgrounds.css
@@ -20,5 +20,5 @@
 /*Din*/
 [user_by_bdfdb*="227781085289775104"],
 [data-user-id*="227781085289775104"] {
-    --user-background: url('https://discord.com/channels/@me/752637159961526395/811703854781431828');
+    --user-background: url('https://i.pinimg.com/originals/8b/46/c6/8b46c6761f68dd633e5b0494712077ec.gif');
 }
