--- a/CustomAnimatedBackgrounds.css
+++ b/CustomAnimatedBackgrounds.css
@@ -20,5 +20,5 @@
 /*Din*/
 [user_by_bdfdb*="227781085289775104"],
 [data-user-id*="227781085289775104"] {
-    --user-background: url('https://i.pinimg.com/originals/8b/46/c6/8b46c6761f68dd633e5b0494712077ec.gif');
+    --user-background: url('https://media1.tenor.com/images/9a37c771e4d7adb11b26f3c866cbb441/tenor.gif?itemid=17012982');
 }
