--- a/CustomAnimatedBackgrounds.css
+++ b/CustomAnimatedBackgrounds.css
@@ -1,8 +1,7 @@
 /*Cookie*/
 [user_by_bdfdb*="340900973490995200"],
 [data-user-id*="340900973490995200"] {
-    /*--user-background: url('https://cdn.discordapp.com/attachments/340907307988680705/811693872669130772/purpleCity.gif');/*
-    --user-background: url('https://media1.tenor.com/images/9a37c771e4d7adb11b26f3c866cbb441/tenor.gif?itemid=17012982');
+    --user-background: url('https://cdn.discordapp.com/attachments/340907307988680705/811693872669130772/purpleCity.gif');
 }
 
 /*Cluster*/
@@ -21,5 +20,5 @@
 /*Din*/
 [user_by_bdfdb*="227781085289775104"],
 [data-user-id*="227781085289775104"] {
-    --user-background: url('https://media1.tenor.com/images/9a37c771e4d7adb11b26f3c866cbb441/tenor.gif?itemid=17012982');
+    --user-background: url('https://media.tenor.com/images/9a37c771e4d7adb11b26f3c866cbb441/tenor.gif?itemid=17012982');
 }
